 *    internally and called if defined (with a setTimeout).  This is an effort
 *    be more compatible with the current Flash Player on Linux
 * = Changed the parameter order for the  fileQueueError and uploadError events so the fileObj is first, like other events.
 * + Added an empty JavaScript object (customSettings) where users can store settings associated with the instance.
 * = Updated all the demos.
 
 * --------- Revision 7.0 beta 1 -----------
 * = Redesigned the Event Chain
 * - Removed much of the queue concepts
 * - Removed the fileValidation events. This can be done in the new uploadStart event
 * - Removed beginUploadOnQueue feature. This can be done in the new dialogComplete event.
 * - Removed use_server_data. This is now always on.
 * + Added functions for retrieving queue stats (number of files uploaded, queued, errors, etc)
 * + Added a file status property to the FileObject. This indicates, uploaded, error, waiting.
 * + Added a single file browser (user cannot select multiple files)
 * + Fixed bug (hopefully) caused if Flash call to JavaScript and in the callback JavaSCript calls to Flash
 *    This only place this does not apply is to uploadStart.  If you call in to Flash from uploadStart use a setTimeout to do it.

 * --------- Revision 6.2 -----------
 * + Added API calls for changing all the changeable settings dynamically
 * = Fixed a bug in FileComplete event handler (in the SWF) that caused an error in Debug Players
 *     and prevent the event from being called
 * + Added a setting (use_server_data_event) to indicate whether FileComplete or ServerData should be called.
 *     The SWFUpload architecture requires that only one file upload success event can be called.
 * = Updated all the Demos, especially the Features Demo and the Forms Demo


 * --------- Revision 6 -----------
 * - Removed the call to setUploadSettings in flashReady.  This was a left over call that is unnecessary.