@@ -1,7 +1,19 @@
 <?php
 	session_start();
 	// I would handle the upload here if I wanted to do anything with it.
-	
+
+	$upload_good = false;
+	if (!isset($_FILES["Filedata"])) {
+		$upload_good = "Not recieved, probably exceeded POST_MAX_SIZE";
+	}
+	else if (!is_uploaded_file($_FILES["Filedata"]["tmp_name"])) {
+		$upload_good = "Upload is not a file. PHP didn't like it.";
+	} 
+	else if ($_FILES["Filedata"]["error"] != 0) {
+		$upload_good = "Upload error no. " + $_FILES["Filedata"]["error"];
+	} else {
+		$upload_good = "The upload was good";
+	}
 ?>
 <p>Upload Page</p>
 
@@ -45,6 +57,7 @@
 		}
 	?>
 </ul>
+<p>Filedata upload status: <?php echo $upload_good; ?>.</p>
 
 <p>Here is the current session id:</p>
 <p><?php echo htmlspecialchars(session_id()); ?></p>
