@@ -8,8 +8,8 @@
     <title>SWFUpload Revision 7.2 beta 2 Demo</title>
 
 	<link href="../css/default.css" rel="stylesheet" type="text/css" />
-	<script type="text/javascript" src="../swfupload_0015/swfupload.js"></script>
-	<script type="text/javascript" src="js_13/handlers.js"></script>
+	<script type="text/javascript" src="../swfupload/swfupload.js"></script>
+	<script type="text/javascript" src="js/handlers.js"></script>
 	<script type="text/javascript">
 		var swf_upload_control;
 
@@ -39,7 +39,7 @@
 				file_complete_handler : fileComplete,
 
 				// Flash Settings
-				flash_url : "../swfupload_0015/swfupload.swf",	// Relative to this file
+				flash_url : "../swfupload/swfupload.swf",	// Relative to this file
 
 				// UI settings
                 ui_function: myShowUI,	// I'm using a custom UI function rather than SWFUpload's default
